feat: automatically activate users on registration